v18.0/6.设计器组件/3.JavaScript框架/2.Vue.md
# designer-vue

您可以执行以下步骤在 Vue 应用程序中添加 SpreadJS 组件版设计器:

## Vue 3

1. 通过在命令提示符中键入以下命令来创建 Vue 项目。

    ```JavaScript
    npm init vue@latest
    ```

    该命令将提示项目名称和其他可以添加到 Vue 项目的可选功能。
2. 在项目中导入以下 SpreadJS 和 SpreadJS Designer Vue 模块。

    ```JavaScript
    npm install @grapecity-software/spread-sheets-designer-resources-cn
    npm install @grapecity-software/spread-sheets-designer
    npm install @grapecity-software/spread-sheets-designer-vue
    npm install @grapecity-software/spread-sheets
    npm install @grapecity-software/spread-sheets-io
    npm install @grapecity-software/spread-excelio
    npm install @grapecity-software/spread-sheets-barcode
    npm install @grapecity-software/spread-sheets-charts
    npm install @grapecity-software/spread-sheets-languagepackages
    npm install @grapecity-software/spread-sheets-print
    npm install @grapecity-software/spread-sheets-pdf
    npm install @grapecity-software/spread-sheets-shapes
    npm install @grapecity-software/spread-sheets-pivot-addon
    npm install @grapecity-software/spread-sheets-tablesheet
    ```
3. 在 main.js 文件中将 SpreadJS Designer Vue 组件注册到应用程序。

    ```JavaScript
    import { createApp } from 'vue'
    import App from './App.vue'
    import Designer from "@grapecity-software/spread-sheets-designer-vue"
    let app = createApp(App);
    app.component("gc-spread-sheets-designer", Designer);
    app.mount('#app');
    ```
4. 通过修改 App.vue 文件将 SpreadJS Designer Vue 组件添加到应用程序中。

    ```JavaScript
    <script setup>
    import '@grapecity-software/spread-sheets/styles/gc.spread.sheets.excel2013white.css';
    import "@grapecity-software/spread-sheets-designer/styles/gc.spread.sheets.designer.min.css";
    import * as GC from "@grapecity-software/spread-sheets";
    import "@grapecity-software/spread-sheets-print";
    import "@grapecity-software/spread-sheets-shapes";
    import "@grapecity-software/spread-sheets-pivot-addon";
    import "@grapecity-software/spread-sheets-tablesheet";
    import "@grapecity-software/spread-sheets-designer-resources-en";
    import "@grapecity-software/spread-sheets-designer";
    
    </script>
    <script>
    export default {
        name: "App",
        data: function () {
        return {
            styleInfo: { height: "98vh", width: "100%" },
            config: config,
            spreadOptions: {
            sheetCount: 2,
            },
            designer: null,
        };
        },
        methods: {
        designerInitialized(value) {
            this.designer = value;
        },
        },
    };
    </script>
    
    <template>
        <div id="gc-designer-container">
        <gc-spread-sheets-designer
            :styleInfo="styleInfo"
            :config="config"
            :spreadOptions="spreadOptions"
            @designerInitialized="designerInitialized"/>
      </div>
    </template>
    
    <style>
    </style>
    ```
5. 运行应用程序。

    ```JavaScript
    npm run dev
    ```

## Vue 与 TypeScript

1. 在命令提示符中输入以下命令来创建一个 Vue 项目。

    ```Shell
    npm init vue@latest sjs-designer-vue-app
    cd sjs-designer-vue-app
    ```

    该命令将提示可以添加到 Vue 项目中的其他可选功能。
2. 对于“添加 TypeScript”的询问选择“是”。
    ![vue3 with ts in designer.001944](/DOCUMENT_SITE_LINK_PREFIX_HERE/document-site-files/images/5fefd5d8-238b-4c13-893b-6f22fcc5b9dd/vue3%20with%20ts%20in%20designer.001944.3f2cb0.png)
<br>
3. 安装以下 npm 包。

    ```Shell
    npm install
    npm install @grapecity-software/spread-sheets-designer
    npm install @grapecity-software/spread-sheets-designer-resources-en
    npm install @grapecity-software/spread-sheets-designer-vue
    npm install @grapecity-software/spread-sheets
    npm install @grapecity-software/spread-excelio
    npm install @grapecity-software/spread-sheets-barcode
    npm install @grapecity-software/spread-sheets-shapes
    npm install @grapecity-software/spread-sheets-charts
    npm install @grapecity-software/spread-sheets-slicers
    npm install @grapecity-software/spread-sheets-languagepackages
    npm install @grapecity-software/spread-sheets-print
    npm install @grapecity-software/spread-sheets-pdf
    npm install @grapecity-software/spread-sheets-pivot-addon
    npm install @grapecity-software/spread-sheets-tablesheet
    npm install @grapecity-software/spread-sheets-ganttsheet
    npm install @grapecity-software/spread-sheets-reportsheet-addon
    npm install @grapecity-software/spread-sheets-formula-panel
    npm install @grapecity-software/spread-sheets-io
    ```
4. 通过修改 `App.vue` 文件将 SpreadJS 设计器 Vue 组件添加到应用程序中并使用 TypeScript 和 `<script setup>`。

    ```Vue
    <template>
      <div id="app">
        <Designer :styleInfo="styleInfo" :config="config" :spreadOptions="spreadOptions"
          @designerInitialized="designerInitialized">
        </Designer>
      </div>
    </template>
    
    <script setup lang="ts">
    import '@grapecity-software/spread-sheets/styles/gc.spread.sheets.excel2013white.css';
    import "@grapecity-software/spread-sheets-designer/styles/gc.spread.sheets.designer.min.css";
    import * as GC from "@grapecity-software/spread-sheets";
    import "@grapecity-software/spread-sheets-print";
    import "@grapecity-software/spread-sheets-shapes";
    import "@grapecity-software/spread-sheets-charts";
    import "@grapecity-software/spread-sheets-slicers";
    import "@grapecity-software/spread-sheets-pivot-addon";
    import "@grapecity-software/spread-sheets-tablesheet";
    import "@grapecity-software/spread-sheets-ganttsheet";
    import "@grapecity-software/spread-sheets-reportsheet-addon";
    import "@grapecity-software/spread-sheets-formula-panel";
    import "@grapecity-software/spread-sheets-io";
    import "@grapecity-software/spread-sheets-designer-resources-en";
    import Designer from "@grapecity-software/spread-sheets-designer-vue";
    
    // 禁用 eslint 的 @typescript-eslint/no-explicit-any 规则
    const config = (GC.Spread.Sheets as any).Designer.DefaultConfig;
    
    if ((config).ribbon[0].buttonGroups[0].commandGroup.children[0]!== "Welcome") {
      config.commandMap = {
        Welcome: {
          title: "Welcome",
          text: "Welcome",
          iconClass: "ribbon-button-welcome",
          bigButton: true,
          commandName: "Welcome",
          execute: async () => {
            alert("欢迎使用新的设计器。");
          },
        },
      };
    
      // 禁用 eslint 的 @typescript-eslint/no-explicit-any 规则
      (config as any).ribbon[0].buttonGroups.unshift({
        label: "NewDesigner",
        thumbnailClass: "welcome",
        commandGroup: {
          children: [
            {
              direction: "vertical",
              commands: ["Welcome"],
            },
          ],
        },
      });
    }
    
    const styleInfo = { height: "98vh", width: "100%" };
    const spreadOptions = {
      sheetCount: 3,
    };
    
    // 禁用 eslint 的 @typescript-eslint/no-explicit-any 规则
    function designerInitialized(value: any) {
      const spread: GC.Spread.Sheets.Workbook = value.getWorkbook();
      const activeSheet = spread.getActiveSheet();
      activeSheet.setValue(0, 0, "Sample");
    }
    
    </script>
    ```
5. 运行应用程序。

    ```Shell
    npm run dev
    ```

## Vue 2

1. 通过在命令提示符中键入以下命令来创建 Vue 项目。
    `JavaScript npm install -g @vue/cli npm i -g @vue/cli-init vue init webpack designercomponent cd designercomponent npm run dev `
2. 在项目中导入以下 SpreadJS Vue 模块。

    ```JavaScript
    npm install @grapecity-software/spread-excelio
    npm install @grapecity-software/spread-sheets
    npm install @grapecity-software/spread-sheets-barcode
    npm install @grapecity-software/spread-sheets-charts
    npm install @grapecity-software/spread-sheets-languagepackages
    npm install @grapecity-software/spread-sheets-pdf
    npm install @grapecity-software/spread-sheets-print
    npm install @grapecity-software/spread-sheets-shapes
    npm install @grapecity-software/spread-sheets-tablesheet
    npm install @grapecity-software/spread-sheets-pivot-addon
    npm install @grapecity-software/spread-sheets-designer
    npm install @grapecity-software/spread-sheets-designer-resources-en
    npm install @grapecity-software/spread-sheets-vue
    npm install @grapecity-software/spread-sheets-designer-vue
    ```
3. 使用 App.vue 中的以下代码片段导入所需的模块并将设计器标记添加到模板中。

    ```JavaScript
    <!--Add designer tag into the template-->
    <template>
        <div id="app">
        <gc-spread-sheets-designer :styleInfo='styleInfo'
                                    :config='config'
                                    @designerInitialized="designerInitialized">
        </gc-spread-sheets-designer>
      </div>
    </template>
    <script>
    
    // import the required modules
    import '@grapecity-software/spread-sheets/styles/gc.spread.sheets.excel2013white.css'
    import '@grapecity-software/spread-sheets-designer/styles/gc.spread.sheets.designer.min.css'
    import '@grapecity-software/spread-sheets-designer-resources-en'
    import '@grapecity-software/spread-sheets-designer-vue'
    export default {
        name: 'App',
        data: function () {
        return {
            styleInfo: { height: '800px', width: '1200px', border: 'solid black 1px' },
            config: null,
            designer: null
        }
        },
        methods: {
        designerInitialized (value) {
            this.designer = value
        }
        }
    }
    </script>
    ```
4. 运行应用程序。

    ```JavaScript
    npm run dev
    ```

## 设置授权

指定版本的许可证许您使用 SpreadJS Designer 组件的所有功能。您需要为 SpreadJS、ExcelIO 和 Designer 组件设置许可证密钥，这可以使用以下代码片段来完成。

```JavaScript
import '@grapecity-software/spread-sheets-designer-resources-en'
import { Designer } from '@grapecity-software/spread-sheets-designer-vue'
import * as GC from '@grapecity-software/spread-sheets'
import * as ExcelIO from '@grapecity-software/spread-excelio'
// license keys
var sjsLicense = 'sjs-distribution-key'
GC.Spread.Sheets.LicenseKey = sjsLicense
ExcelIO.LicenseKey = sjsLicense
GC.Spread.Sheets.Designer.LicenseKey = 'designer-component-distribution-key'
```